fix item spacing on mobile

--- a/style.scss
+++ b/style.scss
@@ -3973,7 +3973,7 @@ body {
 		display: none; /* hide the group admins for now */ 
 	} 
 	ul.item-list li .item { 
-		width: initial; 
+		width: 59%; 
 	} 
 	div.item-list-tabs ul li { 
 		vertical-align: top; 
@@ -4175,6 +4175,9 @@ body {
 		margin-left: 0px !important;
 		float: none !important;
 		display: block;
+	} 
+	ul.item-list li .item { 
+		width: 50%; 
 	} 
 } 
 /* 500px is about where the slider starts to act strangely */ 
